--- a/index.html
+++ b/index.html
@@ -413,6 +413,7 @@ c87.104,0,166.464-16.456,226.136-43.448C367.672,23.216,310.56,0,248.008,0z"/>
                     <p>Address: 12 Iyarere Street, Lagos State, Nigeria</p>
                     <p>Email: ofomaemeka.emmanuel@gmail.com</p>
                     <p>Phone: +2348138837050</p>
+                    <p>Copyright &copy; 2024 EDITION. All right reserved &rightarrow;</p>   
                 </div>
             </div>
         </div>
