--- a/index.html
+++ b/index.html
@@ -24,8 +24,13 @@
                     <g><g><g><g><path fill="#000000" d="M128,10C62.8,10,10,62.8,10,128c0,65.2,52.8,118,118,118c65.2,0,118-52.8,118-118C246,62.8,193.2,10,128,10z M152.3,128l43,43L171,195.3l-43-43l-43,43L60.7,171l43-43l-43-43L85,60.7l43,43l43-43L195.3,85L152.3,128z"/></g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g></g></g>
                     </svg>
             </div>
+            <!-- <svg class="nav_svg" onclick="openmenu()" fill="ffffff" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 455 455" xml:space="preserve" stroke="ffffff"><g id="SVGRepo_bgCarrier" stroke-width="0">
+
+            </g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <g> <rect y="312.5" width="455" height="30"></rect> <rect y="212.5" width="455" height="30">
+
+            </rect> <rect y="112.5" width="455" height="30"></rect> </g> </g></svg> -->
             <!-- <i class="fas fa-bars" onclick="openmenu()"></i> -->
-            <svg class="nav_svg" onclick="openmenu()" fill="#000000" width="50px" height="50px" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M3,8H21a1,1,0,0,0,0-2H3A1,1,0,0,0,3,8Zm18,8H3a1,1,0,0,0,0,2H21a1,1,0,0,0,0-2Zm0-5H3a1,1,0,0,0,0,2H21a1,1,0,0,0,0-2Z"/>
+            <svg class="nav_svg" onclick="openmenu()" fill="#ffffff" width="50px" height="50px" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M3,8H21a1,1,0,0,0,0-2H3A1,1,0,0,0,3,8Zm18,8H3a1,1,0,0,0,0,2H21a1,1,0,0,0,0-2Zm0-5H3a1,1,0,0,0,0,2H21a1,1,0,0,0,0-2Z"/>
             </svg>
 
 
